<resources>
    <!-- TODO: (1,00) Adicionar uma versão em Espanhol das Strings do app. -->
    <string name="app_name">TCCFreak</string>
    <string name="txtsplash">Welcome to TCCFreak!</string>
    <string name="edtlogin">Entre com o seu login</string>
    <string name="txtsenha">Entre com a sua senha</string>
    <string name="msgCamposObrigatorios">Campos de login e senha obrigatórios!</string>
    <string name="tituloSair">Sair</string>
    <string name="msgSair">Deseja realmente sair?</string>
    <string name="opSim">Sim</string>
    <string name="opNao">Não</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_aluno">Alunos</string>
    <string name="nav_trabalho">Trabalhos</string>
    <string name="nav_sair">Sair</string>
    <string name="nav_sincronizacao">Sincronização</string>
    <string name="nav_sincronizar">Sincronizar</string>
    <string name="title_activity_mapa">Map</string>
</resources>
