<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aluno"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_aluno" />
        <item
            android:id="@+id/nav_trabalho"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_trabalho" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_sair" />
    </group>

    <item android:title="@string/nav_sincronizacao">
        <menu>
            <item
                android:id="@+id/nav_sincronizar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_sincronizar" />
        </menu>
    </item>
</menu>
